--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,10 +5,13 @@
 // Variables
 @import "variables";
 
+ul {
+  position: relative;
+}
 .delete {
   position: absolute;
-  padding-right: 1em;
-  right: 0;
+  right: 1em;
+  top: 1em;
   cursor: pointer;
 }
 .actions {
@@ -17,17 +20,10 @@
   padding-left: 15px;
   margin-left: 10px;
  }
-.actions + .actions {
-  border-left: 1px solid #ddd;
-  padding-left: 15px;
-  margin-left: 10px;
-}
 .body{
-  display: inline-block;
-  padding-left: 10px;
-  margin-left: 10px;
-  padding-right: 20px;
-  border-left: 1px solid #ddd;
+  display: block;
+  margin-top: 10px;
+  padding: 5px;
 }
 .priority {
   display: inline-block;
